tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_70.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  p := ((((q * y) * (1223 MOD 200)) + ((+ y) MOD (x * 2))) < (+ ((z * 2) DIV (0 + 0))));
               z := (- (((0 DIV 200) MOD (2 DIV x)) + ((200 - x) + (y + 2))));
               y := (+ ((- (+ 1)) + ((y DIV y) * (x * 2))));
               z := ((+ ((1 MOD 1223) DIV (1 * x))) MOD (- (- (+ z))));
               p := ((((0 - x) + (2 DIV z)) + (- (- y))) > ((- (+ y)) - ((1 DIV 2) - (0 * 1223))));
               z := ((((x - 200) - (200 * 1)) * (- (x + 0))) + (((z - 1223) - (z - 0)) MOD ((z - 0) DIV (x - 2))));
               p := ((- ((z DIV 200) DIV (- y))) = (((z - 1) * (z * 200)) + (+ (200 - 2))));
               p := ((- ((200 + 1223) DIV (- 0))) = ((- (2 DIV 2)) MOD ((+ 1) DIV (1 DIV 1))));
               r := ((~ ((y * 2) >= (z - 0))) OR ((- (x MOD 2)) < ((0 MOD 200) MOD (z * 0))));
               r := ((((1 - 1223) MOD (1223 MOD 200)) DIV ((2 - 200) DIV (200 * 1))) <= ((+ (1223 - 2)) - ((+ 1) DIV (1 DIV x))))
END Test11.